fixed bug with jumping actions when they have tooltip trigger

--- a/packages/components/src/HeaderBar/HeaderBar.scss
+++ b/packages/components/src/HeaderBar/HeaderBar.scss
@@ -23,6 +23,10 @@ $background-color-on-hover: shade($brand-primary, 30);
 		padding: 0;
 		margin: 0;
 
+		:global(.tooltip-overlap) {
+			height: 100%;
+		}
+
 		&.right {
 			margin-left: auto;
 		}
